--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -19,7 +19,7 @@
 	.shortpixel-key-valid {
 	  //  font-weight: bold;
 		//	margin-left: 25px;
-		margin-top: 16px;
+		//margin-top: 16px;
 		display: inline-block;
 
 	}
