--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -986,30 +986,53 @@ div.spio-modal-title {
   width: 100%;
   height: 125px;
   top: 404px;
+  margin-bottom: 10px;
 }
 .wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  align-content: center;
-  margin: 18px;
+  font-weight: 600;
+  margin-bottom: 8px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown name, .wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown info {
-  padding: 12px;
+.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown name {
+  margin: 20px 20px 0 15px;
+  font-family: Roboto, sans-serif;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown .toggle-link {
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  color: #0073aa;
-  cursor: pointer;
-  text-decoration: underline;
+.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown info {
+  margin-top: 20px;
+  color: #00C898;
+  font-family: Roboto, sans-serif;
+}
+.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown .shortpixel-icon.ok {
+  width: 15px;
+  height: 15px;
+  margin-left: 10px;
 }
 .wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown .shortpixel-icon.chevron {
   height: 8px;
   width: 12px;
   transition: transform 0.3s ease;
   margin-left: 5px;
+}
+.wrap.is-shortpixel-settings-page #tab-overview settinglist .toggle-link {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  color: #0073aa;
+  cursor: pointer;
+  text-decoration: underline;
+  line-height: 14.06px;
+  text-align: right;
+  margin-top: 20px;
+  margin-right: 10px;
+}
+.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown + hr {
+  width: 96%;
+  margin: 0 auto;
+  border: none;
+  border-top: 1px solid #92D5E3;
+  height: 1px;
 }
 .wrap.is-shortpixel-settings-page #tab-overview settinglist content {
   display: none;
