--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -156,31 +156,31 @@
       width: 100%;
       height: 125px;
       top: 404px;
-
-
-
-
+      margin-bottom: 10px;
 
       closed-apikey-dropdown{
             display: flex;
             flex-direction: row;
             align-items: flex-start;
-            align-content: center;
-            margin: 18px;
+            font-weight: 600;
+            margin-bottom: 8px;
 
-            name, info
-            {
-              padding: 12px;
+            name {
+              margin: 20px 20px 0 15px ;
+              font-family: Roboto, sans-serif;
             }
 
+        info
+        {
+          margin-top: 20px;
+          color: $green_highlight;
+          font-family: Roboto, sans-serif;
+        }
 
-        .toggle-link {
-          display: flex;
-          align-items: center;
-          font-size: 16px;
-          color: #0073aa;
-          cursor: pointer;
-          text-decoration: underline;
+        .shortpixel-icon.ok{
+          width: 15px;
+          height: 15px;
+          margin-left: 10px;
         }
 
         .shortpixel-icon.chevron {
@@ -189,9 +189,33 @@
           transition: transform 0.3s ease;
           margin-left: 5px;
         }
+
       }
+      .toggle-link {
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+        color: #0073aa;
+        cursor: pointer;
+        text-decoration: underline;
+        line-height: 14.06px;
+        text-align: right;
+        margin-top: 20px;
+        margin-right: 10px;
 
+        //.toggle-text{
+        //  font-family: Roboto, sans-serif;
+        //  font-weight: 400;
+        //}
+      }
+      closed-apikey-dropdown + hr {
+        width: 96%;
+        margin: 0 auto;
+        border: none;
+        border-top: 1px solid $blue_open;
+        height: 1px;
 
+      }
 
          content{
            display: none;
@@ -248,8 +272,6 @@
         transform: rotate(180deg);
       }
     }
-
-
 
 
 }
