--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -984,99 +984,108 @@ div.spio-modal-title {
   background: #F4FBFC;
   border-radius: 6px;
   width: 100%;
-  height: 125px;
-  top: 404px;
+  overflow: hidden;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
+  max-height: 125px;
   margin-bottom: 10px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   font-weight: 600;
   margin-bottom: 8px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown name {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown name {
   margin: 20px 20px 0 15px;
   font-family: Roboto, sans-serif;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown info {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown info {
   margin-top: 20px;
   color: #00C898;
   font-family: Roboto, sans-serif;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown .shortpixel-icon.ok {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown .shortpixel-icon.ok {
   width: 15px;
   height: 15px;
   margin-left: 10px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown .shortpixel-icon.chevron {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown .shortpixel-icon.chevron {
   height: 8px;
   width: 12px;
   transition: transform 0.3s ease;
   margin-left: 5px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist .toggle-link {
+.wrap.is-shortpixel-settings-page #tab-overview .toggle-link {
   margin-left: auto;
   display: flex;
   align-items: center;
   color: #0073aa;
   cursor: pointer;
   text-decoration: underline;
-  line-height: 14.06px;
+  line-height: 14px;
   text-align: right;
   margin-top: 20px;
   margin-right: 10px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist closed-apikey-dropdown + hr {
+.wrap.is-shortpixel-settings-page #tab-overview closed-apikey-dropdown + hr {
   width: 96%;
   margin: 0 auto;
   border: none;
   border-top: 1px solid #92D5E3;
   height: 1px;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content {
-  display: none;
+.wrap.is-shortpixel-settings-page #tab-overview content {
+  opacity: 1;
+  overflow: hidden;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
+  display: flex;
   flex-direction: row;
   align-items: flex-start;
-  align-content: center;
   margin: 20px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content input {
+.wrap.is-shortpixel-settings-page #tab-overview content input {
   border: 1px solid #1ABDCA;
   background: url("../images/icon/key.svg") 1% center no-repeat;
   background-color: #fff;
   padding-left: 30px;
   height: 36px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content button {
+.wrap.is-shortpixel-settings-page #tab-overview content button {
   padding: 4px 16px;
   color: #fff;
   background: #1ABDCA;
   box-sizing: border-box;
   margin: 0 0 0 10px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content button i {
+.wrap.is-shortpixel-settings-page #tab-overview content button i {
   width: 12px;
   height: 12px;
   margin-leftt: 12px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content .apifield {
+.wrap.is-shortpixel-settings-page #tab-overview content .apifield {
   position: relative;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist content .apifield i {
+.wrap.is-shortpixel-settings-page #tab-overview content .apifield i {
   position: absolute;
   right: 3px;
   top: 5px;
   margin-bottom: 10px;
   cursor: pointer;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist #toggle-content:checked ~ content {
-  display: flex;
+.wrap.is-shortpixel-settings-page #tab-overview #toggle-content:not(:checked) ~ content,
+.wrap.is-shortpixel-settings-page #tab-overview #toggle-content:not(:checked) ~ closed-apikey-dropdown + hr {
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist #toggle-content:checked + closed-apikey-dropdown .toggle-text {
-  content: "Hide API Key";
+.wrap.is-shortpixel-settings-page #tab-overview #toggle-content:checked ~ content,
+.wrap.is-shortpixel-settings-page #tab-overview #toggle-content:checked ~ closed-apikey-dropdown + hr {
+  opacity: 1;
+  max-height: 200px;
 }
-.wrap.is-shortpixel-settings-page #tab-overview settinglist #toggle-content:checked + closed-apikey-dropdown .shortpixel-icon {
+.wrap.is-shortpixel-settings-page #tab-overview #toggle-content:checked + closed-apikey-dropdown .shortpixel-icon.chevron {
   transform: rotate(180deg);
 }
 .wrap.is-shortpixel-settings-page .deliverWebpTypes, .wrap.is-shortpixel-settings-page .deliverAlteringTypesPicture {
