changed hex into variables  in .scss files

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -170,7 +170,7 @@
   background: #d6d8d9;
 }
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .optimize-bar .point.checked {
-  background: #1abdca;
+  background: #1ABDCA;
 }
 .sp-column-info .thumbnails.optimized .thumb-wrapper .thumb .cutoff {
   float: right;
