--- a/res/scss/elements/_colors.scss
+++ b/res/scss/elements/_colors.scss
@@ -7,8 +7,8 @@ $color-brokenwhite: #F5F5F5;
 $color-grey: #D7D7D7;
 
 $blue_default: #1ABDCA;
-$blue_closed : #116C7E;
-$blue_open :  #92D5E3;
+$blue_dark : #116C7E;
+$blue_light :  #92D5E3;
 $blue_background: #F4FBFC;
 
 $black_default: #001E24;
