--- a/res/scss/elements/_setting.scss
+++ b/res/scss/elements/_setting.scss
@@ -26,7 +26,7 @@ setting{
     display: block;
     padding: 6px 10px 0 0;
     box-sizing: border-box;
-    color: $blue_closed;
+    color: $blue_dark;
 
   }
  
