--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -717,7 +717,7 @@
            .red { color: #ff0000; }
          }
          button {
-           background: #F5F5F5;
+           background: $color-brokenwhite;
            color: #1FBEC9;
            border: 1px solid #1FBEC9;
            border-radius: 3px;
