--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -1020,7 +1020,7 @@ div.spio-modal-title {
   margin-left: auto;
   display: flex;
   align-items: center;
-  color: #0073aa;
+  color: #0f6a7d;
   cursor: pointer;
   text-decoration: underline;
   line-height: 14px;
@@ -1207,7 +1207,7 @@ div.spio-modal-title {
                // float: left;
              //   clear: both;
                 font-size: 12px;
-                color: $blue_closed;
+                color: $blue_dark;
                 input { margin-right: 8px; }
 
 
