--- a/res/scss/view/_settings-exclusions.scss
+++ b/res/scss/view/_settings-exclusions.scss
@@ -15,7 +15,7 @@
        line-height: 24px;
 
        font-size: 12px;
-       color: $blue_closed;
+       color: $blue_dark;
        input { margin-right: 8px; }
     }
 
@@ -34,7 +34,7 @@
        line-height: 24px;
        display: inherit;
        font-size: 12px;
-       color: $blue_closed;
+       color: $blue_dark;
        input { margin-right: 8px; }
     }
 
@@ -65,7 +65,7 @@
       border: 4px dashed #ccc;
       font-size: 20px;
       background: #fff;
-      color: $blue_open;
+      color: $blue_light;
     }
 
     ul.exclude-list {
@@ -75,7 +75,7 @@
           //  justify-content: space-between;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr auto;
-						color: $blue_closed;
+						color: $blue_dark;
 						b {
 							margin-bottom: 4px;
 						}
@@ -84,7 +84,7 @@
             }
             width: 100%;
             box-sizing: border-box;
-            border: 1px solid $blue_closed;
+            border: 1px solid $blue_dark;
 						padding: 8px 12px;
             background: #fff;
             border-radius: 8px;
@@ -129,7 +129,7 @@
 
     .new-exclusion
     {
-        border: 1px solid $blue_closed;
+        border: 1px solid $blue_dark;
         padding: 16px;
         display: inline-block;
         background: #fff;
@@ -146,7 +146,7 @@
 
         h3 {
             padding: 8px 16px;
-            border-bottom: 1px solid $blue_open;
+            border-bottom: 1px solid $blue_light;
             margin: 0;
         }
         +.new-exclusion-button
@@ -176,7 +176,7 @@
              // float: left;
            //   clear: both;
               font-size: 12px;
-              color: $blue_closed;
+              color: $blue_dark;
               input { margin-right: 8px; }
 
 
