--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -89,7 +89,7 @@
             //margin-right: 3%;
             padding: 8px 0;
             flex-direction: column;
-            border-right: 1px solid #92D5E3;
+            border-right: 1px solid $blue_light;
 
             &:last-child
             {
@@ -196,7 +196,7 @@
         margin-left: auto;
         display: flex;
         align-items: center;
-        color: #0073aa;
+        color: $color-darkest;
         cursor: pointer;
         text-decoration: underline;
         line-height: 14px;
@@ -214,7 +214,7 @@
         width: 96%;
         margin: 0 auto;
         border: none;
-        border-top: 1px solid $blue_open;
+        border-top: 1px solid $blue_light;
         height: 1px;
         transition: max-height 0.3s ease, opacity 0.3s ease;
       }
@@ -241,7 +241,7 @@
       content button {
         padding: 4px 16px;
         color: #fff;
-        background: #1ABDCA;
+        background: $blue_default;
         box-sizing: border-box;
         margin: 0 0 0 10px;
       }
