--- a/res/scss/view/_settings-optimisation.scss
+++ b/res/scss/view/_settings-optimisation.scss
@@ -27,6 +27,7 @@
 			//		margin: 0 -2px;
 					font-weight: bold;
 					display: inline-block;
+					margin-right: 1px;
 					cursor: pointer;
 			//		border-right: 1px solid #fff;
 					span {
